2004-11-29  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-server-source.c: Added NULL pointer checks
	* libseahorse/seahorse-recipients.glade: Fixed Recipients dialog focus issues
	and added mnemonic chars. (bug# 159911)
	* libseahorse/seahorse-operation.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-pgp-source.c:
	* libseahorse/seahorse-server-source.c: Extended SeahorseOperation to allow 
	error results, cancel status, and additional properties 
	* libseahorse/seahorse-gpgmex-keyserver.c: Fix problem where it kills all 
	running programs :)
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-gpgmex.h:
	* libseahorse/seahorse-gpgmex-keyserver.c:
	* libseahorse/seahorse-keyserver-op.c:
	* libseahorse/seahorse-keyserver-op.h:
	* libseahorse/seahorse-server-source.c:
	* src/seahorse-keyserver-results.c: Rudimentary keyserver import support 
	(bug# 157818)
	
2004-11-28  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-multi-source.c:
	* libseahorse/seahorse-multi-source.h: Added seahorse_multi_source_get_primary
	* libseahorse/seahorse-operation.c: Hold ref on operations during cancel or done
	* libseahorse/seahorse-operation.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-pgp-source.c:
	* libseahorse/seahorse-pgp-source.h: Implemented SeahorseOperation as complete
	GObject, with derived classes for specific operations
	* data/seahorse.schemas.in:
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-gpgmex.h:
	* libseahorse/seahorse-gpgmex-keyserver.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-server-source.c:
	* libseahorse/seahorse-server-source.h:
	* src/Makefile.am:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-key-properties.c:
	* src/seahorse-keyserver-results.c:
	* src/seahorse-keyserver-results.glade:
	* src/seahorse-keyserver-search.c:
	* src/seahorse-keyserver-search.glade: