@@ -1,3 +1,11 @@
+2004-12-02	Nate Nielsen <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-op.c: 
+	* libseahorse/seahorse-op.h:
+	* libseahorse/seahorse-util.c:
+	* libseahorse/seahorse-util.h:
+	* src/main.c: Prompt before overwriting files (bug# 159972)
+	
 2004-11-29  Nate Nielsen <nielsen@memberwebs.com>
 
 	* libseahorse/seahorse-server-source.c: Added NULL pointer checks
